--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,7 @@ header ul li {
     font-style: normal;
     margin: 0 0 15px 0;
     padding: 0 30px;
+    letter-spacing: 6px;;
    
 }
 
@@ -395,7 +396,7 @@ header ul li {
 }
 
 .close-up-logo {
-    height: 100vh;
+    height: 70vh;
     background-color: #1d1d1d;
     background-image: url("../img/close-up-audi-logo.jpg");
     background-repeat: no-repeat;
@@ -470,6 +471,7 @@ header ul li {
 .color-bar {
     background-image: linear-gradient(to right, white,black,white);
     width: 80%;
+    max-width: 1500px;
     height: 3px;
     display: flex;
     flex-direction: row;
@@ -553,7 +555,7 @@ header ul li {
 }
 
 #wheel-choice {
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 
 .buy-btn {
@@ -577,7 +579,7 @@ header ul li {
 
 /* wheel block */
 .close-up-wheel {
-    height: 100vh;
+    height: 70vh;
     background-color: #1d1d1d;
     background-image: url("../img/close-up-wheel.jpg");
     background-repeat: no-repeat;
@@ -589,6 +591,7 @@ header ul li {
 /* quattro */
 .quattro {
     height: 100vh;
+    max-height: 1000px;
     min-height: 800px;
     background-image: url("../img/winter-audi-logo.jpg");
     background-repeat: no-repeat;
@@ -717,11 +720,11 @@ header ul li {
 
 /* specs */
 .specs {
-    height: 700px;
+    height: 570px;
 }
 
 .specs-details {
-    margin-top: 230px;
+    margin-top: 180px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1111,14 +1114,16 @@ footer i {
 .product-masthead h1 span {
     display: block;
     margin-bottom: 30px;
-    padding: 10px;
     background-color: #4b4b4b;
     font-size: 40px;
-    width: 250px;
+    padding: 10px;
+    width: 330px;
+    display: flex;
+    justify-content: center;
 }
 
 .product-img-block {
-    height: 100vh;
+    height: 70vh;
     background-image: url("../img/audi-r8-back-view.jpg");
     background-size: cover;
     background-position-y: 60%;
@@ -1194,12 +1199,14 @@ table tr:nth-child(1) td {
 }
 
 table {
-    margin-bottom: 60px;
+    margin-bottom: 110px;
 }
 
 /* engine block */
 .engine {
-    height: 90vh;
+    height: 50vh;
+    min-height: 600px;
+    max-height: 800px;
     /* source: https://www.audi-mediacenter.com/en/photos/detail/audi-r8-v10-21605 */
     background-image: url("../img/audi-r8-engine-faded.jpg");
     background-attachment: fixed;
@@ -1256,7 +1263,7 @@ table {
 
 }
 
-@media screen and (max-width: 1285px){
+@media screen and (max-width: 1600px){
     .quattro-text h2 {
         margin-top: 90px;
     }
@@ -1543,6 +1550,10 @@ table {
     .inventory {
         height: auto;
     }
+
+    .breakSmallScreens {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 660px) {
@@ -1671,16 +1682,14 @@ table {
 
 @media screen and (max-width: 552px) {
 
-    .breakSmallScreens {
-        display: block;
-    }
+
 
     .title {
         line-height: 70px;
     }
 
     .titleContainer {
-        padding-bottom: 60px;
+        padding-bottom: 10vh;
     }
 }
 
